data/derived/sp14/progs/unify/prog1827.ml.out
Characters 47-57:
  let b' = f b in ( b' = b ) 
                  ^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
